<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvEditNameLbl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:labelFor="@id/etEditItemName"
        android:text="@string/tvEditNameLbl_txt"
        android:textAppearance="?attr/textAppearanceListItem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etEditItemName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBaseline_toBaselineOf="@id/tvEditNameLbl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvEditNameLbl" />

    <CheckBox
        android:id="@+id/chkAddNewAfterSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chkAddNewAfterSave_txt"
        app:layout_constraintStart_toStartOf="@id/tvEditNameLbl"
        app:layout_constraintTop_toBottomOf="@id/etEditItemName" />

    <Button
        android:id="@+id/btnSaveItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSaveItem_txt"
        app:layout_constraintEnd_toEndOf="@id/etEditItemName"
        app:layout_constraintTop_toBottomOf="@id/etEditItemName" />

</androidx.constraintlayout.widget.ConstraintLayout>