<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/gameSelectionFragment">

    <fragment
        android:id="@+id/gameSelectionFragment"
        android:name="net.oddware.gamepad.GameSelectionFragment"
        android:label="@string/fragGameSelection_title"
        tools:layout="@layout/fragment_game_selection">
        <action
            android:id="@+id/action_gameSelectionFragment_to_editItemFragment"
            app:destination="@id/editItemFragment" />
        <action
            android:id="@+id/action_gameSelectionFragment_to_playerSelectionFragment"
            app:destination="@id/playerSelectionFragment" />
        <action
            android:id="@+id/action_gameSelectionFragment_to_confirmationDialog"
            app:destination="@id/confirmationDialog" />
    </fragment>
    <fragment
        android:id="@+id/editItemFragment"
        android:name="net.oddware.gamepad.EditItemFragment"
        android:label="@string/fragEditItem_title"
        tools:layout="@layout/fragment_edit_item">
        <action
            android:id="@+id/action_editItemFragment_to_gameSelectionFragment"
            app:destination="@id/gameSelectionFragment" />
        <action
            android:id="@+id/action_editItemFragment_to_playerSelectionFragment"
            app:destination="@id/playerSelectionFragment" />
        <argument
            android:name="loadAction"
            android:defaultValue="-1"
            app:argType="integer" />
        <argument
            android:name="itemID"
            android:defaultValue="-1L"
            app:argType="long" />
        <argument
            android:name="itemType"
            android:defaultValue="@null"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="mode"
            android:defaultValue="Add/Edit"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/playerSelectionFragment"
        android:name="net.oddware.gamepad.PlayerSelectionFragment"
        android:label="@string/fragPlayerSelection_title"
        tools:layout="@layout/fragment_player_selection">
        <action
            android:id="@+id/action_playerSelectionFragment_to_gameSelectionFragment"
            app:destination="@id/gameSelectionFragment" />
        <action
            android:id="@+id/action_playerSelectionFragment_to_editItemFragment"
            app:destination="@id/editItemFragment" />
        <action
            android:id="@+id/action_playerSelectionFragment_to_confirmationDialog"
            app:destination="@id/confirmationDialog" />
        <argument
            android:name="gameID"
            android:defaultValue="-1L"
            app:argType="long" />
        <action
            android:id="@+id/action_playerSelectionFragment_to_activeRoundFragment"
            app:destination="@id/activeRoundFragment" />
        <argument
            android:name="game_name"
            android:defaultValue="UNDEFINED"
            app:argType="string" />
    </fragment>
    <dialog
        android:id="@+id/confirmationDialog"
        android:name="net.oddware.gamepad.ConfirmationDialog"
        android:label="ConfirmationDialog">
        <action
            android:id="@+id/action_confirmationDialog_to_gameSelectionFragment"
            app:destination="@id/gameSelectionFragment" />
        <action
            android:id="@+id/action_confirmationDialog_to_playerSelectionFragment"
            app:destination="@id/playerSelectionFragment" />
        <argument
            android:name="numItems"
            android:defaultValue="0"
            app:argType="integer" />
        <argument
            android:name="itemType"
            app:argType="string"
            android:defaultValue="UNDEFINED" />
    </dialog>
    <fragment
        android:id="@+id/archiveFragment"
        android:name="net.oddware.gamepad.ArchiveFragment"
        android:label="@string/fragArchive_title"
        tools:layout="@layout/fragment_archive" >
        <action
            android:id="@+id/action_archiveFragment_to_activeRoundFragment"
            app:destination="@id/activeRoundFragment" />
    </fragment>
    <fragment
        android:id="@+id/activeRoundFragment"
        android:name="net.oddware.gamepad.ActiveRoundFragment"
        android:label="@string/fragActiveRound_title"
        tools:layout="@layout/fragment_active_round">
        <action
            android:id="@+id/action_activeRoundFragment_to_gameSelectionFragment"
            app:destination="@id/gameSelectionFragment" />
        <argument
            android:name="game_name"
            android:defaultValue="UNDEFINED"
            app:argType="string" />
        <argument
            android:name="round_date"
            android:defaultValue="UNDEFINED"
            app:argType="string" />
        <argument
            android:name="archive_mode"
            app:argType="boolean"
            android:defaultValue="false" />
    </fragment>
</navigation>